tests/NormalTests/paczka2/big_fuzzy/94511573.err
Error in line 4: [641 [641 32,8
Error in line 3: pfSRMd S909 11,6
Error in line 10: 3PFGN2 S641 89,6
Error in line 12: 3PFGN2 S909 11,1
Error in line 14: 3PFGN2 A335 46,3
Error in line 17: 3PFGN2 S991 76,2
Error in line 21: S641 S991 22,0
Error in line 23: 3PFGN2 S909 2,8
Error in line 24: S641 S909 39,7
Error in line 33: qjQjdInqnG S641 41,4
Error in line 34: qjQjdInqnG S909 88,0
Error in line 45: reqlLgz2r S991 80,7
Error in line 47: reqlLgz2r S641 15,0
Error in line 49: pfSRMd S909 66,5
Error in line 48: reqlLgz2r A335 83,8
Error in line 50: pfSRMd A335 65,4
Error in line 54: pfSRMd S991 36,5
Error in line 59: 3PFGN2 S991 887,2
Error in line 62: qjQjdInqnG A335 30,6
Error in line 65: x8Burk S909 80,8
Error in line 77: S641 S991 81,8
Error in line 78: S641 A335 66,0
Error in line 80: reqlLgz2r S909 18,6
Error in line 89: pfSRMd A335 88,7
Error in line 92: reqlLgz2r A335 -1,9
Error in line 85: x8Burk S641 10,6
Error in line 83: S641 S909 28,9
Error in line 97: x8Burk S909 23,3
Error in line 103: 3PFGN2 S909 6,4
Error in line 100: x8Burk S641 75,0
Error in line 109: qbQusDrGE SD0D 8,1
Error in line 112: x8Burk S991 2;,7
Error in line 104: 3PFGN2 S991 94,7
Error in line 125: qbQusDrGE A335 f9,0
Error in line 114: x8Burk S991 16,8
Error in line 122: pfSRMd S909 51,6
Error in line 127: x8Burk A335 23,6
Error in line 116: qbQusDrGE S641 42,6
Error in line 133: qbQusDrGE A335 101,5
Error in line 132: x8Burk S909 21,3
Error in line 134: 3PFGN2 S641 36,0
Error in line 142: 3PFGN2 A335 43,7
Error in line 155: S641 S991 83,2
Error in line 124: reqlLgz2r A335 79,6
Error in line 160: qbQusDrGE S909 79,4
Error in line 169: reqlLgz2r S641 69,2
Error in line 177: reqlLgz2r S991 75,7
Error in line 173: x8Burk A335 13,4
Error in line 183: reqlLgz2r S641 -3,8
Error in line 178: reqlLgz2r S641 54,2
Error in line 185: qbQusDrGE A335 15,7
Error in line 186: 3PFGN2 A335 43,4
Error in line 200: qbQusDrGE S641 90,6
Error in line 194: S641 S909 200,7
Error in line 211: qbQusDrGE A335 85,5
Error in line 216: pfSRMd S991 100,0
Error in line 199: x8Burk S641 99,4
Error in line 222: x8Burk S991 38,5
Error in line 218: pfSRMd A335 1,7
Error in line 233: qbQusDrGE S991 306,2
Error in line 234: reqlLgz2r S641 32,7
Error in line 226: S641 A335 19,9
Error in line 246: qbQusDrGE A335 94,5
